--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
@@ -129,6 +129,9 @@
   <data name="AverageHealPerSecond" xml:space="preserve">
     <value>Average heal per sec.</value>
   </data>
+  <data name="AverageItemllvl" xml:space="preserve">
+    <value>Average ILvl</value>
+  </data>
   <data name="AverageResources" xml:space="preserve">
     <value>Average resources</value>
   </data>
