--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
@@ -129,6 +129,9 @@
   <data name="AverageHealPerSecond" xml:space="preserve">
     <value>Средне исцеление в сек.</value>
   </data>
+  <data name="AverageItemllvl" xml:space="preserve">
+    <value>Ср. ур. пр.</value>
+  </data>
   <data name="AverageResources" xml:space="preserve">
     <value>Средне знач. ресурсов</value>
   </data>
