--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
@@ -138,6 +138,9 @@
   <data name="AverageResourcesPerSecond" xml:space="preserve">
     <value>Average resources per sec.</value>
   </data>
+  <data name="Buffs" xml:space="preserve">
+    <value>Buffs</value>
+  </data>
   <data name="CLearFilters" xml:space="preserve">
     <value>Clear all filters</value>
   </data>
