--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
@@ -138,6 +138,9 @@
   <data name="AverageResourcesPerSecond" xml:space="preserve">
     <value>Средне ресурсов в сек.</value>
   </data>
+  <data name="Buffs" xml:space="preserve">
+    <value>Усиления</value>
+  </data>
   <data name="CLearFilters" xml:space="preserve">
     <value>Очистить все фильтры</value>
   </data>
