Fix combat log parser
Fixed combat log parser"
 - now in logs included all pets and actions from pets (healing, damage)
 - now included absorbed damage for healers (not only healing)

--- a/src/CombatAnalysis.App/Localizations/Resources/HealDoneDetails/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/HealDoneDetails/Resource.resx
@@ -129,6 +129,9 @@
   <data name="CritHealing" xml:space="preserve">
     <value>Crit healing</value>
   </data>
+  <data name="DamageAbsorbed" xml:space="preserve">
+    <value>Damage absorb.</value>
+  </data>
   <data name="Healing" xml:space="preserve">
     <value>Healing</value>
   </data>
