Add filters for damage done and taken
Add new filter(s) for damage done:
 - now users can remove information about damage done by pets and creatures.

Add new filter(s) for damage taken:
 - now users can see about damage taken without absorbed damage (clean damage taken).

--- a/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.ru.resx
@@ -183,6 +183,9 @@
   <data name="ShowParry" xml:space="preserve">
     <value>Показать парирование</value>
   </data>
+  <data name="ShowPets" xml:space="preserve">
+    <value>Показать питомцев и существ</value>
+  </data>
   <data name="ShowResist" xml:space="preserve">
     <value>Показать сопр.</value>
   </data>
