Add status progress bar for Desktop app
Now users, while they uploading Combat logs, can see progress of uploading any where (not only on page with all combats). For Desktop application

--- a/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.ru.resx
@@ -177,8 +177,14 @@
   <data name="Logs" xml:space="preserve">
     <value>Логи</value>
   </data>
+  <data name="Menu" xml:space="preserve">
+    <value>Меню</value>
+  </data>
   <data name="MinimazeWindow" xml:space="preserve">
     <value>Свернуть</value>
+  </data>
+  <data name="Notifications" xml:space="preserve">
+    <value>Уведомления</value>
   </data>
   <data name="Profile" xml:space="preserve">
     <value>Профиль</value>
