--- a/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
@@ -177,8 +177,14 @@
   <data name="Logs" xml:space="preserve">
     <value>Logs</value>
   </data>
+  <data name="Menu" xml:space="preserve">
+    <value>Menu</value>
+  </data>
   <data name="MinimazeWindow" xml:space="preserve">
     <value>Minimaze</value>
+  </data>
+  <data name="Notifications" xml:space="preserve">
+    <value>Notifications</value>
   </data>
   <data name="Profile" xml:space="preserve">
     <value>Profile</value>
