--- a/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.resx
@@ -184,7 +184,7 @@
     <value>Show parry</value>
   </data>
   <data name="ShowPets" xml:space="preserve">
-    <value>Show pets and creature</value>
+    <value>Show pets and creatures</value>
   </data>
   <data name="ShowResist" xml:space="preserve">
     <value>Show resist</value>
