Add link combat logs to chat
Added new feature: link combat logs to chats:
 - now users can create link selected Combat logs to froup or personal chats. After created link, another users from chat can open your Combat logs and see details

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chatMessage.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chatMessage.json
@@ -7,5 +7,8 @@
   "Save": "Save",
   "Delivery": "Message delivery",
   "Delivered": "Message delivered",
-  "Read": "Message read"
+  "Read": "Message read",
+  "OpenCombatLog": "Open information about selected combat log",
+  "Open": "Open",
+  "CombatsLog": "Combats log"
 }
