--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/mainInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/mainInformation.json
@@ -4,5 +4,14 @@
   "NeedToAddSomething": "Need to add at least 1 item.",
   "Chat": "Chat",
   "Discussion": "Discussion",
-  "ShouldAuthorize": "Should be authorize"
+  "ShouldAuthorize": "Should be authorize",
+  "Chats": "Chats",
+  "PersonalChats": "Personal chats",
+  "GroupChats": "Group chats",
+  "Close": "Close",
+  "Add": "Add",
+  "HideChats": "Hide chats",
+  "ShowChats": "Show chats",
+  "SendToChat": "Send link to chat",
+  "Sent": "Sent"
 }
