--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chatMessage.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chatMessage.json
@@ -7,5 +7,8 @@
   "Save": "Сохранить",
   "Delivery": "Сообщение отправляется",
   "Delivered": "Сообщение отправлено",
-  "Read": "Сообщение прочитано"
+  "Read": "Сообщение прочитано",
+  "OpenCombatLog": "Открыть информацию о выбранном логе",
+  "Open": "Открыть",
+  "CombatsLog": "Лог боев"
 }
