Fix User informations style

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
@@ -14,7 +14,7 @@
   "FirstName": "First name",
   "LastName": "Last name",
   "AboutMe": "About me",
-  "Men": "Men",
+  "Man": "Man",
   "Woman": "Woman",
   "JoinToChats": "Join to chats",
   "JoinToCommunities": "Join to communities"
