--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
@@ -14,7 +14,7 @@
   "FirstName": "Имя",
   "LastName": "Фамилия",
   "AboutMe": "Обо мне",
-  "Men": "Муж",
+  "Man": "Муж",
   "Woman": "Жен",
   "JoinToChats": "Присоединиться к чатам",
   "JoinToCommunities": "Присоединиться к сообществам"
