--- a/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ChangeLocationPath" xml:space="preserve">
-    <value>Изменить</value>
+    <value>Change</value>
   </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
+  </data>
+  <data name="LogsLocation" xml:space="preserve">
+    <value>Logs path</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Settings</value>
