Fix problem with Combat player data
Fix problem when Combat player item lvl did not uploaded in DB

--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
@@ -129,7 +129,7 @@
   <data name="AverageHealPerSecond" xml:space="preserve">
     <value>Средне исцеление в сек.</value>
   </data>
-  <data name="AverageItemllvl" xml:space="preserve">
+  <data name="AverageItemLevel" xml:space="preserve">
     <value>Ср. ур. пр.</value>
   </data>
   <data name="AverageResources" xml:space="preserve">
