--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
@@ -129,7 +129,7 @@
   <data name="AverageHealPerSecond" xml:space="preserve">
     <value>Average heal per sec.</value>
   </data>
-  <data name="AverageItemllvl" xml:space="preserve">
+  <data name="AverageItemLevel" xml:space="preserve">
     <value>Average ILvl</value>
   </data>
   <data name="AverageResources" xml:space="preserve">
