--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Analyzing" xml:space="preserve">
-    <value>Analyzing</value>
+  <data name="Analysing" xml:space="preserve">
+    <value>Analysing</value>
   </data>
   <data name="Combat" xml:space="preserve">
     <value>Combat</value>
