--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
@@ -223,7 +223,7 @@
     <value>Status</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Analyzing</value>
+    <value>Analysing</value>
   </data>
   <data name="Uploaded" xml:space="preserve">
     <value>Uploaded:</value>
