Update web app styles
Update web app styles

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/communication.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/communication.json
@@ -9,6 +9,5 @@
   "Friends": "Friends",
   "Recomendations": "Recomendations",
   "MyPosts": "My posts",
-  "CreateChat": "Create chat",
-  "CreateCommunity": "Create community"
+  "Create": "Create"
 }
