--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
@@ -4,5 +4,6 @@
   "EN": "English",
   "Registration": "Registration",
   "Login": "Login",
-  "Logout": "Logout"
+  "Logout": "Logout",
+  "Loading": "Loading..."
 }
