--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/communication.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/communication.json
@@ -9,6 +9,5 @@
   "Friends": "Друзья",
   "Recomendations": "Рекомендации",
   "MyPosts": "Мои посты",
-  "CreateChat": "Создать чат",
-  "CreateCommunity": "Создать сообщество"
+  "Create": "Создать"
 }
