--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
@@ -6,5 +6,12 @@
   "YouNeed": "Вам необходимо",
   "Login": "Войти",
   "InApp": "в свой аккаунт что бы продолжить использовать 'Общение'",
-  "GoToLogin": "Перейти к странице 'Войти'"
+  "GoToLogin": "Перейти к странице 'Войти'",
+  "ExploreFeed": "Просматривайте вашу Социальную Стену",
+  "ChattingWithFriends": "Общайтесь с друзьями в чате",
+  "CreateJoinCommunity": "Создайте свое Сообщество или присоединяйтесь к другим",
+  "AddFriedns": "Добавляйте друзей и следите за активностью друзей",
+  "SaveAnalyzing": "Сохраняйте ваши логи боев",
+  "ExploreAnalyzing": "Изучайте и сравнивайте логи боев с другими логами",
+  "ShareAnalyzing": "Делитесь логами боя с друзьями"
 }
