--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
@@ -4,5 +4,6 @@
   "EN": "Английский",
   "Registration": "Регистрация",
   "Login": "Войти",
-  "Logout": "Выход"
+  "Logout": "Выход",
+  "Loading": "Загрузка..."
 }
