Update web app styles
Update web app styles

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/myCommunities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/myCommunities.json
@@ -7,5 +7,6 @@
   "Search": "Search",
   "TypeCommunityName": "Сommunity name",
   "ShowSearchCommunity": "Show search communities",
-  "HideSearchCommunity": "Hide search communities"
+  "HideSearchCommunity": "Hide search communities",
+  "CreateNew": "Create new"
 }
