--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
@@ -7,5 +7,6 @@
   "Search": "Поиск",
   "TypeCommunityName": "Название сообщества",
   "ShowSearchCommunity": "Показать поиск сообществ",
-  "HideSearchCommunity": "Скрыть поиск сообществ"
+  "HideSearchCommunity": "Скрыть поиск сообществ",
+  "CreateNew": "Создать новое"
 }
