Add Dashboard pin
Now users can close some Dashboard items (damage, healing, damage taken and etc), that not need now - they can open this items in any times

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/dashboard.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/dashboard.json
@@ -6,5 +6,6 @@
   "More": "More",
   "Less": "Less",
   "PlayersDied": "Players died",
-  "Empty": "Empty"
+  "Empty": "Empty",
+  "ClosedItems": "Closed items"
 }
