--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/dashboard.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/dashboard.json
@@ -6,5 +6,6 @@
   "More": "Больше",
   "Less": "Меньше",
   "PlayersDied": "Смерти игроков",
-  "Empty": "Пусто"
+  "Empty": "Пусто",
+  "ClosedItems":  "Скрытые элементы"
 }
