Update Chats component
Update Chats component

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
@@ -6,5 +6,6 @@
   "PersonalChats": "Messages",
   "SelectChat": "Select chat or",
   "Create": "create",
-  "NewChat": "new chat"
+  "NewChat": "new chat",
+  "PersonalChatsEmptyYet": "You don't have personal chats yet"
 }
