--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
@@ -6,5 +6,6 @@
   "PersonalChats": "Сообщения",
   "SelectChat": "Выберите чат или",
   "Create": "создайте",
-  "NewChat": "новый чат"
+  "NewChat": "новый чат",
+  "PersonalChatsEmptyYet": "У вас еше нет личных чатов"
 }
