--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/personalChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/personalChat.json
@@ -5,5 +5,6 @@
   "Cancel": "Cancel",
   "RemoveChat": "Remove chat",
   "SendMessage": "Send message",
-  "TypeYourMessage": "Type your message"
+  "TypeYourMessage": "Type your message",
+  "CanNotSendEmpty": "You can not send empty message"
 }
