--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/personalChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/personalChat.json
@@ -5,5 +5,6 @@
   "Cancel": "Отмена",
   "RemoveChat": "Удалить чат",
   "SendMessage": "Отправить сообщение",
-  "TypeYourMessage": "Напишите ваше сообщение"
+  "TypeYourMessage": "Напишите ваше сообщение",
+  "CanNotSendEmpty": "Вы не можете отправить пустое сообщение"
 }
