Chats component refactoring
Chats component refactoring

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
@@ -7,5 +7,6 @@
   "SelectChat": "Select chat or",
   "Create": "create",
   "NewChat": "new chat",
-  "PersonalChatsEmptyYet": "You don't have personal chats yet"
+  "PersonalChatsEmptyYet": "You don't have personal chats yet",
+  "GroupChatsEmptyYet": "You don't have group chats yet"
 }
