--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
@@ -7,5 +7,6 @@
   "SelectChat": "Выберите чат или",
   "Create": "создайте",
   "NewChat": "новый чат",
-  "PersonalChatsEmptyYet": "У вас еше нет личных чатов"
+  "PersonalChatsEmptyYet": "У вас еше нет личных чатов",
+  "GroupChatsEmptyYet": "У вас еше нет групповых чатов"
 }
