Fix style issues
Fix style issues

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
@@ -5,5 +5,8 @@
   "Registration": "Регистрация",
   "Login": "Войти",
   "Logout": "Выход",
-  "Loading": "Загрузка..."
+  "Loading": "Загрузка...",
+  "People": "Люди",
+  "Empty": "Пусто",
+  "Close": "Закрыть"
 }
