--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
@@ -5,5 +5,8 @@
   "Registration": "Registration",
   "Login": "Login",
   "Logout": "Logout",
-  "Loading": "Loading..."
+  "Loading": "Loading...",
+  "People": "People",
+  "Empty": "Empty",
+  "Close": "Close"
 }
