Fix send message in chat
Fix send message in chat

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -16,5 +16,6 @@
   "Cancel": "Cancel",
   "Rules": "Rules",
   "SaveChanges": "Save",
-  "Remove": "Remove"
+  "Remove": "Remove",
+  "CanNotSendEmpty": "You can not send empty message"
 }
