--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -16,5 +16,6 @@
   "Cancel": "Отмена",
   "Rules": "Правила",
   "SaveChanges": "Сохранить",
-  "Remove": "Удалить"
+  "Remove": "Удалить",
+  "CanNotSendEmpty": "Вы не можете отправить пустое сообщение"
 }
