Fix Web app general issues
Fix Web app general issues

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
@@ -27,5 +27,7 @@
   "Update": "Update",
   "Apply": "Apply",
   "NextStep": "Next step",
-  "PrevioslyStep": "Previosly step"
+  "PrevioslyStep": "Previosly step",
+  "CreateCommunity": "Create community",
+  "NameDescriptionRequired": "Name and description required"
 }
