--- a/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.ru.resx
@@ -129,9 +129,6 @@
   <data name="CloseWindow" xml:space="preserve">
     <value>Закрыть окно</value>
   </data>
-  <data name="Combat" xml:space="preserve">
-    <value>Бой</value>
-  </data>
   <data name="Damage" xml:space="preserve">
     <value>Урон</value>
   </data>
@@ -185,6 +182,9 @@
   </data>
   <data name="Notifications" xml:space="preserve">
     <value>Уведомления</value>
+  </data>
+  <data name="Players" xml:space="preserve">
+    <value>Игроки</value>
   </data>
   <data name="Profile" xml:space="preserve">
     <value>Профиль</value>
