Add scalable Web UI for mobile devices
Add scalable Web UI for mobile devices

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/translate.json
@@ -6,7 +6,8 @@
   "Login": "Login",
   "Logout": "Logout",
   "Loading": "Loading...",
-  "People": "People",
+  "Users": "Users",
   "Empty": "Empty",
-  "Close": "Close"
+  "Close": "Close",
+  "UsersSearch": "Search users"
 }
