--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
@@ -6,7 +6,8 @@
   "Login": "Войти",
   "Logout": "Выход",
   "Loading": "Загрузка...",
-  "People": "Люди",
+  "Users": "Пользователи",
   "Empty": "Пусто",
-  "Close": "Закрыть"
+  "Close": "Закрыть",
+  "UsersSearch": "Поиск пользователей"
 }
