Add Voice chat reconnect
Add Voice chat reconnect:
 - now users, who lost connection or reload page, can connect to chat immediately and continue negotiations

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -17,5 +17,8 @@
   "Rules": "Rules",
   "SaveChanges": "Save",
   "Remove": "Remove",
-  "CanNotSendEmpty": "You can not send empty message"
+  "CanNotSendEmpty": "You can not send empty message",
+  "Connecting": "Connecting...",
+  "SoundSettings": "Sound settings:",
+  "MicrophoneSettings": "Microphone settings:"
 }
