Add Screen sharing
Add Screen sharing:
 - now users can share your screen in Voice chats between all chat users. In same time can be active only 1 screen sharing for all users in chat

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -17,8 +17,5 @@
   "Rules": "Rules",
   "SaveChanges": "Save",
   "Remove": "Remove",
-  "CanNotSendEmpty": "You can not send empty message",
-  "Connecting": "Connecting...",
-  "SoundSettings": "Sound settings:",
-  "MicrophoneSettings": "Microphone settings:"
+  "CanNotSendEmpty": "You can not send empty message"
 }
