Update voice chat styles
Update voice chat styles

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/voiceChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/voiceChat.json
@@ -6,5 +6,8 @@
   "TurnOnCamera": "Turn on Camera",
   "TurnOffMicrophone": "Turn off Microphone",
   "TurnOnMicrophone": "Turn on Microphone",
-  "Leave": "Leave"
+  "Leave": "Leave",
+  "TurnOnScreenSharing": "Turn on screen sharing",
+  "TurnOffScreenSharing": "Turn off screen sharing",
+  "ExperimentalFunctions": "Experimental functions"
 }
