Add Email verifications
Now users should pass Email verification to get access to all features: just select 'Verify account' in profile and follow Verification link in Email

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/profile.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/profile.json
@@ -14,5 +14,6 @@
   "Gender": "Gender",
   "Save": "Save",
   "Cancel": "Cancel",
-  "Edit": "Edit"
+  "Edit": "Edit",
+  "VerifyAccount": "Verify account"
 }
