--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/profile.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/profile.json
@@ -14,5 +14,6 @@
   "Gender": "Гендерная принадлежность",
   "Save": "Сохранить",
   "Cancel": "Отмена",
-  "Edit": "Редактировать"
+  "Edit": "Редактировать",
+  "VerifyAccount": "Подвержденеи аккаунта"
 }
