--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/identity/authorizationCallback.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/identity/authorizationCallback.json
@@ -1,4 +1,6 @@
 ﻿{
   "Authorization": "Авторизация",
-  "Unauthorized": "Неудача. Пожалуйста, повторите авторизацию еще раз"
+  "Unauthorized": "Неудача. Пожалуйста, повторите авторизацию еще раз",
+  "Verified": "Email подтвержден",
+  "AccessRestored": "Доступ к аккаунту восстановлен"
 }
