Add Email verification restrictions
Add Email verification restrictions

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/selectedCommunity.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/selectedCommunity.json
@@ -23,5 +23,6 @@
   "Discussions": "Discussions",
   "Friends": "Friends",
   "Contacts": "Contacts",
-  "Menu": "Menu"
+  "Menu": "Menu",
+  "VerificationCreateCommunityPost": "To create new Community post, you should verify your email in Profile"
 }
