--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/post.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/post.json
@@ -4,5 +4,7 @@
   "Dislike": "Dislike",
   "Comment": "Comment",
   "AddComment": "Add comment",
-  "Hide": "Hide"
+  "Hide": "Hide",
+  "ReactionsForbidden": "Reactions forbidden",
+  "VerificationReactions": "To use Reactions, you should verify your email in Profile"
 }
