Add restrictions to Leave from group chat
Group chat Owner can not leave from group chat before transfer rights to the group to another user of the group

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -17,5 +17,6 @@
   "Rules": "Rules",
   "SaveChanges": "Save",
   "Remove": "Remove",
-  "CanNotSendEmpty": "You can not send empty message"
+  "CanNotSendEmpty": "You can not send empty message",
+  "YouShouldTransferRights": "Before leaving, you must transfer the rights to the group to another user of the group"
 }
