--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -20,5 +20,6 @@
   "CanNotSendEmpty": "Вы не можете отправить пустое сообщение",
   "Connecting": "Соединение...",
   "SoundSettings": "Настройки звука:",
-  "MicrophoneSettings": "Настройки микрофона:"
+  "MicrophoneSettings": "Настройки микрофона:",
+  "YouShouldTransferRights": "Перед уходом вы должны передать права на группу другому пользователю группы"
 }
