Update Combat parser library
Update Combat parser library:
 - added information about Player pets (that summoned before Combat)
 - added information about creatures that summoned by other creatures (like shaman's totem that summon Fire or Earth elemental)

--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -181,7 +181,7 @@
     <value>Result</value>
   </data>
   <data name="SaveData" xml:space="preserve">
-    <value>Save data</value>
+    <value>Save</value>
   </data>
   <data name="SaveDataDescribe" xml:space="preserve">
     <value>Saved data is allow to see details in the future and share with other users.</value>
