--- a/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AllCombats" xml:space="preserve">
-    <value>All combats</value>
-  </data>
   <data name="Chat" xml:space="preserve">
     <value>Chat</value>
   </data>
@@ -128,6 +125,9 @@
   </data>
   <data name="CloseWindow" xml:space="preserve">
     <value>Close a window</value>
+  </data>
+  <data name="Combats" xml:space="preserve">
+    <value>Combats</value>
   </data>
   <data name="Damage" xml:space="preserve">
     <value>Damage</value>
