Add Cancel to Combat log process
Now user can cancel Combat log cancel process if did mistake (selected other file) or wanna cancel process right now/select other file to process

--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -120,6 +120,9 @@
   <data name="Analysing" xml:space="preserve">
     <value>Analysing</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="Combat" xml:space="preserve">
     <value>Combat</value>
   </data>
