Add save in DB CombatAura
Add save in DB CombatAura

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
@@ -2,7 +2,7 @@
   "Damage": "Damage",
   "Healing": "Healing",
   "DamageTaken": "Damage taken",
-  "ResourcesRecovery": "Resources recovery",
+  "EnergyRecovery": "Resources recovery",
   "Deaths": "Deaths",
   "Buffs": "Buffs",
   "CombatStatus": "Combat status",
