--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
@@ -2,7 +2,7 @@
   "Damage": "Урон",
   "Healing": "Исцеление",
   "DamageTaken": "Получено урона",
-  "ResourcesRecovery": "Восстановлено ресурсов",
+  "EnergyRecovery": "Восстановлено ресурсов",
   "Deaths": "Смертей",
   "Buffs": "Усилений",
   "CombatStatus": "Статус боя",
